[gd_scene load_steps=4 format=3 uid="uid://bld8ct8mxkuv"]

[ext_resource type="Script" path="res://src/net/multiplayer_room.gd" id="1_e4oo2"]
[ext_resource type="PackedScene" uid="uid://c1atqyt1eixeo" path="res://src/levels/buffa.tscn" id="2_aplai"]
[ext_resource type="PackedScene" uid="uid://cpw1sr25ca3m4" path="res://src/player/player.tscn" id="2_xoytm"]

[node name="MultiplayerRoom" type="Node"]
script = ExtResource("1_e4oo2")
player_prefab = ExtResource("2_xoytm")

[node name="GameWorld" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="GameWorld"]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="GameWorld/Players"]
_spawnable_scenes = PackedStringArray("res://src/player/player.tscn")
spawn_path = NodePath("..")

[node name="Camera3D" type="Camera3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 17.2701, 16.5805)

[node name="Level" type="Node3D" parent="GameWorld"]

[node name="Node3D" parent="GameWorld/Level" instance=ExtResource("2_aplai")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Options" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="HBoxContainer" parent="Control/Options"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Control/Options/Host"]
layout_mode = 2
text = "Host"

[node name="Join" type="HBoxContainer" parent="Control/Options"]
layout_mode = 2

[node name="IpAddress" type="LineEdit" parent="Control/Options/Join"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="Control/Options/Join"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="Control/Options/Host/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Control/Options/Join/JoinButton" to="." method="_on_join_button_pressed"]
